2008-10-01  Edward Hervey  <bilboed@gmail.com>

	Patch by: Thijs Vermeir <thijsveirmer@gmail.com>
	* pitivi/ui/Makefile.am:
	Dist extra file
	Fixes #554544

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.11.1.2 pre-release

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

	* ChangeLog:
	Updating ChangeLog with git-svn information

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

ui: hide the webcam dialogbox before setting pipeline to NULL
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1298 d3729300-e425-0410-8a4c-d956edccc248


2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

Remove print statement
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1297 d3729300-e425-0410-8a4c-d956edccc248


2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

ui/Makefile.am : dist files from Sarath's branch
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1296 d3729300-e425-0410-8a4c-d956edccc248


2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

device : cleanup code, document methods/classes
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1295 d3729300-e425-0410-8a4c-d956edccc248


2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

SmartBin : Add a 'seekable' property to know if we can do seek/getduration on the given bin.
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1294 d3729300-e425-0410-8a4c-d956edccc248


2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

mainwindow : Don't propose screencast option until dbus features are available in Istanbul
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1293 d3729300-e425-0410-8a4c-d956edccc248


2008-09-27  Edward Hervey <edward.hervey@collabora.co.uk>

UI : Allow selection of input devices for capture
git-svn-id: svn+ssh://svn.gnome.org/svn/pitivi/trunk@1292 d3729300-e425-0410-8a4c-d956edccc248


2008-09-27  Edward Hervey <edward.hervey@collabora.co.uk>
